message seccomp_filter {
	required uint32		id			= 1;
	required bytes		filter			= 2;
	optional uint32		prev			= 3;
}

message seccomp_entry {
	repeated seccomp_filter		seccomp_filters	= 1;
}
